--- a/technia.admintool.bulkupdate/technia.admintool.bulkupdate.csproj
+++ b/technia.admintool.bulkupdate/technia.admintool.bulkupdate.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.authentication.ui.win\ds.authentication.ui.win.csproj" />
     <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.authentication\ds.authentication.csproj" />
     <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.delmia.dsmfg\ds.delmia.dsmfg.csproj" />
+    <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.enovia.change\ds.enovia.change.csproj" />
     <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.enovia.common\ds.enovia.common.csproj" />
     <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.enovia.dseng\ds.enovia.dseng.csproj" />
     <ProjectReference Include="..\3dxws-dotnet-core-sdk\ds.enovia.dslc\ds.enovia.dslc.csproj" />
